author description changed

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -39,7 +39,7 @@
                 <div class="img"></div>
                 <h2>Said I.R Suybate V.</h2>
                 <h4>Full Stack Developer</h4>
-                <p>Said es una de esas personas que ama aprender nuevas cosas, mejorar su habilidades y mejorar cada día. Esta aptitud lo ayudo a lo largo de muchos retos exitosos y un muy buen reconocimiento en el campo laboral.</p>
+                <p>Said es una de esas personas que ama aprender nuevas cosas, mejorar sus habilidades y mejorar cada día. Esta aptitud lo ayudo a lo largo de muchos retos exitosos y un muy buen reconocimiento en el campo laboral.</p>
                 <button mat-flat-button>
                     Portfolio here!
                 </button>
